<resources>
    <string name="app_name">Pantrie</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_new_log_in">NewLogIn</string>
    <string name="hintTxtItem">Enter an item here ...</string>
    <string name="lblBtnAdd">Add Item</string>
    <string name="txtEmpty">List is empty</string>
    <string name="title_activity_edit_list">EditList</string>
    <string name="title_activity_forgot_password">ForgotPassword</string>
    <string name="title_activity_list_adapter">ListAdapter</string>
    <string name="forgotPasswordInfoText">Forgot Password? No big Deal, \n \t \tReset it with Your email</string>
    <string name="emailHintText">Email</string>
    <string name="resetButtonText6">Reset Password</string>
    <string name="backFromForgotPasswordText">Back</string>
    <string name="enterUsernameText">Username</string>
    <string name="enterPasswordText">Password</string>
    <string name="createNewAccountString">Create Account</string>
    <string name="logInString">LOGIN</string>
    <string name="forgotPasswordString">Forgot Password?</string>
    <string name="newUsernameString">Username</string>
    <string name="newEmailString">Email</string>
    <string name="newPasswordString">Password</string>
    <string name="confirmPasswordString">Confirm Password</string>
    <string name="createAccountButtonString">Create Account</string>
    <string name="title_activity_conversion_calculator_mass">ConversionCalculatorMass</string>
    <string name="action_add_items">Add Item</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_conversion_calculator_volume">ConversionCalculatorMass</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ItemNameString">Item Name</string>
    <string name="itemAmountString">Item Amount</string>
    <string name="lowItemAmountString">Low Amount</string>
    <string name="title_activity_get_info">GetInfo</string>
    <string name="title_activity_convert_volume">ConvertVolume</string>
    <string name="title_activity_convert_mass">ConvertMass</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_main_pantrie">MainPantrie</string>
    <string name="title_activity_list_main">ListMain</string>
    <string name="title_activity_arrow_game">ArrowGame</string>
    <string name="title_activity_load_pantrie">LoadPantrie</string>
    <string name="title_activity_home">Home</string>
    <string name="textViewAmount">Amount</string>
    <string name="textViewLowAmount">Low</string>
    <string name="textViewItemName">Name</string>

</resources>
