<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="com.nicodangelo.pantrie.main.MainPantrie">

    <EditText
        android:hint="@string/enterUsernameText"

        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/usernameText"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"/>

    <EditText
        android:hint="@string/enterPasswordText"

        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passwordText"
        android:layout_below="@+id/usernameText"
        android:layout_centerHorizontal="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/createNewAccountString"
        android:id="@+id/toNewAccountButton"
        android:layout_below="@+id/passwordText"
        android:layout_alignLeft="@+id/passwordText"
        android:layout_alignStart="@+id/passwordText"
        android:onClick="launchNewLogIn"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logInString"
        android:id="@+id/logInButton"
        android:layout_alignBottom="@+id/toNewAccountButton"
        android:layout_alignRight="@+id/passwordText"
        android:layout_alignEnd="@+id/passwordText"
        android:onClick="logIn"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgotPasswordString"
        android:id="@+id/forgotPasswordButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="14dp"
        android:onClick="forgotMyPassword"/>


</RelativeLayout>
