<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="com.nicodangelo.pantrie.main.NewLogIn">

    <EditText
        android:hint="@string/newUsernameString"

        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/newUsernameText"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"/>

    <EditText
        android:hint="@string/newEmailString"

        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/newEmailText"
        android:layout_below="@+id/newUsernameText"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:hint="@string/newPasswordString"

        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/newPasswordText"
        android:layout_below="@+id/newEmailText"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:hint="@string/confirmPasswordString"

        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/newConfirmPasswordText"
        android:layout_below="@+id/newPasswordText"
        android:layout_centerHorizontal="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/createAccountButtonString"
        android:id="@+id/createAccountButton"
        android:layout_alignRight="@+id/newConfirmPasswordText"
        android:layout_alignEnd="@+id/newConfirmPasswordText"
        android:layout_below="@+id/newConfirmPasswordText"
        android:layout_alignLeft="@+id/newConfirmPasswordText"
        android:onClick="createNewAccount"/>

</RelativeLayout>
