<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:isScrollContainer="false"
                tools:context="com.nicodangelo.pantrie.list.ListMain">

    <ListView
        android:id="@+id/listView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/textViewName" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/textViewItemName"
        android:id="@+id/textViewName"
        android:layout_alignTop="@+id/textViewAmount"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/textViewAmount"
        android:id="@+id/textViewAmount"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/textViewName"
        android:layout_toEndOf="@+id/textViewName"
        android:layout_marginLeft="52dp"
        android:layout_marginStart="52dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/textViewLowAmount"
        android:id="@+id/textViewLowAmount"
        android:layout_marginLeft="45dp"
        android:layout_marginStart="45dp"
        android:layout_alignTop="@+id/textViewAmount"
        android:layout_toRightOf="@+id/textViewAmount"
        android:layout_toEndOf="@+id/textViewAmount" />

</RelativeLayout>



